--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "```{admonition} Example: Derivation of watt\n",
     ":class: dropdown, tip\n",
-	":open:\n",
+    ":open:\n",
     "$P = F\\cdot v$\\\n",
     "$[\\mathrm{W}] = [\\mathrm{kg m s}^{-2}] \\cdot [\\mathrm{m s}^{-1}] = [\\mathrm{kg m}^{2} \\mathrm{s}^{-3}]$\n",
     "```\n",
@@ -170,7 +170,7 @@
     ":label: ex-eenh\n",
     ":class: dropdown\n",
     ":open:\n",
-    "Provided the equation $F=k \\cdot v^2$, what is the unit of $k$ expressed in SI-units (kg,m,s,A,K)?\n",
+    "Provided the equation $F=k \\cdot v^2$, what is the unit of $k$ expressed in SI-units (kg, m, s, A, K)?\n",
     "```\n",
     "\n",
     "````{solution} ex-eenh\n",
@@ -669,7 +669,7 @@
     "\n",
     "````{admonition} Example: Poisson\n",
     ":class: dropdown, tip\n",
-	":open:\n",
+    ":open:\n",
     "An average of 20 people eat at a restaurant every day. What does the probability distribution of the number of people who come to eat look like? \\\n",
     "The probability distribution of the number of visitors is shown in {numref}`Figure {number} <fig:MO:restaurant>`. The probability is described by: $P(X = k) = \\frac{20^k e^{-20}}{k!}$.\n",
     "\n",
@@ -746,7 +746,7 @@
     "If you use Chauvenet's criterion to exclude an outlier, you must always mention this in your report! In addition, you must recalculate the mean and standard deviation after removing the suspect point. After all, this point has a significant effect on your dataset.\n",
     "\n",
     "```{exercise} Outlier\n",
-	":open:\n",
+    ":open:\n",
     ":class: dropdown\n",
     ":label: Outlier\n",
     "Which measurement from series 1b is suspicious? Use Chauvenet's criterion to see if you can exclude this measurement.\n",
@@ -927,7 +927,7 @@
     "\n",
     "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
-	":open:\n",
+    ":open:\n",
     "*Question:* \n",
     "\n",
     "Calculate the circumference of a circle with a radius of \n",
@@ -974,7 +974,7 @@
     "\n",
     "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
-	":open:\n",
+    ":open:\n",
     "*Question:* \n",
     "\n",
     "Determine the equation of the uncertainty in $f(x) = 2x\\cos{x}$?\n",
@@ -1005,7 +1005,7 @@
     "```{exercise} \n",
     ":label: ex-doos\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "Eric is weighing a box. The mass is (56 $\\pm$ 2) g. The box's sides are (3.0 $\\pm$ 0.1) cm. \n",
     "\n",
     "1.  Calculate the gravity working on the box.\n",
@@ -1025,7 +1025,7 @@
     "````\n",
     "\n",
     "```{admonition} Example: \n",
-	":open:\n",
+    ":open:\n",
     ":class: dropdown, tip\n",
     "\n",
     "*Question:* \n",
@@ -1048,7 +1048,7 @@
     "\n",
     "```{admonition} Tip: Standard functions \n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "**Tabel:** Overview of widely used functions and the corresponding uncertainties. \n",
     ">| Function $Z(x,y)$ | $\\frac{dZ}{dx}$ | Uncertainty $u(Z)$                                                  |\n",
     ">|------------------|-----------------|--------------------------------------------------------------------|\n",
@@ -1065,7 +1065,7 @@
     "\n",
     "```{admonition} Tip: Calculation rules\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     ">**Reminder:**\n",
     ">\n",
     ">| Function                | Derivative                          |\n",
@@ -1080,7 +1080,7 @@
     "\n",
     "````{admonition} Example: reducing measurement uncertainty\n",
     ":class: dropdown, tip\n",
-	":open:\n",
+    ":open:\n",
     "\n",
     "For an experiment, we want to determine the frequency difference $\\Delta f$ between two tones $f_0$ and $f_1$. After a measurement, it turns out that $f_0 = (1250 \\pm 3)$ Hz and $f_1 = (1248 \\pm 4)$ Hz. The difference (including uncertainty) is therefore $\\Delta f = (2 \\pm 5)$ Hz (check).\n",
     "\n",
@@ -1106,7 +1106,7 @@
     "```{exercise}\n",
     ":label: ex:lamp\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "\n",
     "The table below gives measurements of the voltage of and current through a lamp. \n",
     "\n",
@@ -1133,7 +1133,7 @@
     "```{exercise}\n",
     ":label: ex:Z\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "The table below gives values and uncertainties for variables $A$, $B$, and $C$. Calculate the value and uncertainties of $Z$ for the cases given below. \n",
     "\n",
     "**Tabel**: Three variables and their uncertainties.\n",
@@ -1162,7 +1162,7 @@
     "\n",
     "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
-	":open:\n",
+    ":open:\n",
     "You want to use a mass-spring system to accurately determine the mass of 10 different loads. The manufacturer states that these loads have a mass of (50 ± 3) g. However, you want to know the exact mass of each load, accurate to the nearest gram. The maximum relative uncertainty is therefore 2%. What does the experiment look like?\n",
     "\n",
     "The mass of the mass-spring system is calculated as follows: \n",
@@ -1298,7 +1298,7 @@
     "\n",
     "````{admonition} Example:\n",
     ":class: dropdown, tip\n",
-	":open:\n",
+    ":open:\n",
     "We want to determine the value of the acceleration due to gravity $g$. To do this, we take measurements between the period $T$ and the length $L$ of a pendulum.\n",
     "\n",
     "According to theory, the relationship between the period and length is as follows: $T = 2\\pi\\sqrt{\\frac{L}{g}}$\n",
@@ -1372,7 +1372,7 @@
     "```{exercise}\n",
     ":label: ex-unc\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "The values of $a$ and $x$ are given in the table below.\n",
     "\n",
     "|   a             |     $u(a)$      |    x             |     $u(x)$      |\n",
@@ -1403,7 +1403,7 @@
     "```{exercise}\n",
     ":label: ex-verg\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "Derive equation {eq}`eq:afleiding`.\n",
     "```\n",
     "\n",
@@ -1415,7 +1415,7 @@
     "```{exercise}\n",
     ":label: ex-afstand\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "A distance $s$ is measured as the difference between two distances $p$ and $q$. The positions of $p$ and $q$ are: $p = (30.0\\pm0.9)$ km and $q = (10.0\\pm0.1)$ km. Calculate the distance $s$ and the corresponding uncertainty $u(s)$. Write the result down using the correct notation. \n",
     "```\n",
     "\n",
@@ -1427,7 +1427,7 @@
     "```{exercise}\n",
     ":label: ex-balk\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "Consider a beam with length $L=(7.5\\pm0.1)$ m, width $B=(12.5\\pm0.2)$ cm en height $H=(15.0\\pm0.3)$ cm. The area $A$ is given by $B \\cdot H$. Determine the uncertainties $u(A)$ and $u(V)$. \n",
     "```\n",
     "\n",
@@ -1440,7 +1440,7 @@
     "```{exercise}\n",
     ":label: ex-pend\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "The gravitational acceleration $g$ is determined using a pendulum. The period is $T = (1.60\\pm0.03)$ s and the length of the pendulum is $L = (64.0\\pm0.8)$ cm.\n",
     "\n",
     "1.  Give the relation between the period and the length of the pendulum.\n",
@@ -1472,7 +1472,7 @@
     "```{exercise}\n",
     ":label: ex-G\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "Variable $G$ is dependent on the measured variables $x$ and $y$, and their relation is $G(x,y)=\\frac{1}{2} x y^{3} + 5 x^{2} y$. The uncertainties in $x$ and $y$ are $u(x)$ and $u(y)$, respectively. Determine the equation for the uncertainty $u(G)$. \n",
     "```\n",
     "\n",
@@ -1487,7 +1487,7 @@
     "```{exercise}\n",
     ":label: ex-bol\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "Consider a sphere with radius $R=(3.02 \\pm 0.06)$ m. Determine the surface area $A$ and the volume $V$ with the corresponding (relative) uncertainties. \n",
     "```\n",
     "\n",
@@ -1503,7 +1503,7 @@
     "```{exercise}\n",
     ":label: ex-sin\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "Consider $f(x)=2\\sin{x}$, with $x$ a measured quantity with uncertainty $u(x)$. Derive an equation for the uncertainty $u(f)$.\n",
     "```\n",
     "\n",
@@ -1515,7 +1515,7 @@
     "```{exercise}\n",
     ":label: ex-relatie\n",
     ":class: dropdown\n",
-	":open:\n",
+    ":open:\n",
     "How can you linearize the relations (1-4) below, such that they can be plotted as a straight line $y = mx + c$? Give the expression for the slope $m$, and the intersection $c$.\n",
     "\n",
     "1.  $V = aU^2$\n",
@@ -1555,7 +1555,7 @@
    "formats": "ipynb,md"
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1569,7 +1569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
