Update Notebook 6 Measurement uncertainty.ipynb

--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -111,7 +111,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Introduction\n",
     "\n",
@@ -1055,7 +1057,7 @@
     ">| $x + y$          | 1               | $\\sqrt{u(x)^2+u(y)^2}$                                             |\n",
     ">| $x \\cdot y$      | y               | $\\sqrt{(y\\cdot u(x))^2+(x\\cdot u(y))^2}$                           |\n",
     ">| $x^n$            | $n\\cdot x^{n-1}$| $\\vert n\\cdot x^{n-1}\\cdot u(x)\\vert$ or $\\vert\\frac{u(Z)}{Z}\\vert = \\vert n\\frac{u(x)}{x}\\vert$ |\n",
-    ">| $e^{cx}$         | $ce^{cx}$       | $ce^x \\cdot(cx)$ or $Z \\cdot u(x)$                                   |\n",
+    ">| $e^{cx}$         | $ce^{cx}$       | $ce^x \\cdot(cx) \\cdot u(x)$ or $c\\cdot Z \\cdot u(x)$                                   |\n",
     ">| $n^x$            | $n^x \\ln{n}$    | $n^x \\ln{n} \\cdot u(x)$                                             |\n",
     ">| $\\ln{x}$         | $\\frac{1}{x}$   | $\\frac{u(x)}{x}$                                                   |\n",
     ">| $\\sin{x}$        | $\\cos{x}$       | $\\vert\\cos{x}\\vert\\cdot u(x)$                                               |\n",
