Further fixes in function table

--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -1056,10 +1056,10 @@
     ">|------------------|-----------------|--------------------------------------------------------------------|\n",
     ">| $x + y$          | 1               | $\\sqrt{u(x)^2+u(y)^2}$                                             |\n",
     ">| $x \\cdot y$      | y               | $\\sqrt{(y\\cdot u(x))^2+(x\\cdot u(y))^2}$                           |\n",
-    ">| $x^n$            | $n\\cdot x^{n-1}$| $\\vert n\\cdot x^{n-1}\\cdot u(x)\\vert$ or $\\vert\\frac{u(Z)}{Z}\\vert = \\vert n\\frac{u(x)}{x}\\vert$ |\n",
-    ">| $e^{cx}$         | $ce^{cx}$       | $ce^x \\cdot(cx) \\cdot u(x)$ or $c\\cdot Z \\cdot u(x)$                                   |\n",
-    ">| $n^x$            | $n^x \\ln{n}$    | $n^x \\ln{n} \\cdot u(x)$                                             |\n",
-    ">| $\\ln{x}$         | $\\frac{1}{x}$   | $\\frac{u(x)}{x}$                                                   |\n",
+    ">| $x^n$            | $n\\cdot x^{n-1}$| $\\vert n\\cdot x^{n-1}\\cdot u(x)\\vert$ and $\\vert\\frac{u(Z)}{Z}\\vert = \\vert n\\frac{u(x)}{x}\\vert$ |\n",
+    ">| $e^{cx}$         | $ce^{cx}$       | $\\vertce^x \\cdot(cx)\\vert \\cdot u(x)$ or $\\vertc\\cdot Z \\vert\\cdot u(x)$                                   |\n",
+    ">| $n^x$            | $n^x \\ln{n}$    | $\\vertn^x \\ln{n} \\vert\\cdot u(x)$                                             |\n",
+    ">| $\\ln{x}$         | $\\frac{1}{x}$   | $\\frac{u(x)}{\\vert x\\vert}$                                                   |\n",
     ">| $\\sin{x}$        | $\\cos{x}$       | $\\vert\\cos{x}\\vert\\cdot u(x)$                                               |\n",
     ">| $\\cos{x}$        | $-\\sin{x}$      | $\\vert\\sin{x}\\vert\\cdot u(x)$                                               |\n",
     ">| $\\tan{x}$        | $1+\\tan^2{x}$   | $(1+\\tan^2{x})\\cdot u(x)$ or $(1+Z^2) \\cdot u(x)$                    |\n",
